--- a/src/styles/Buttons.css
+++ b/src/styles/Buttons.css
@@ -8,16 +8,15 @@
 .buttons {
   background-color: rgb(9, 134, 156);
   border: 1px solid rgb(9, 134, 156);
-  border-radius: 5px;
-  color: white;
+color: white;
   cursor: pointer;
   font-size: 20px;
   font-weight: 600;
   margin: 0 10px 20px 0;
   outline: none;
-  padding: 5px;
   transition: all 0.3s;
-  width: 30%;
+  min-width: 70px;
+  height: 53px;
 }
 
 .buttons:hover {
