--- a/src/styles/HeaderSearchBar.css
+++ b/src/styles/HeaderSearchBar.css
@@ -5,8 +5,8 @@
   flex-direction: column;
   justify-content: center;
   padding: 30px 0;
-  position: absolute;
-  top: 73px;
+  position: fixed;
+  top: 72px;
   width: 100%;
   z-index: 2;
 }
@@ -27,7 +27,6 @@
 .label {
   color: rgb(246, 241, 255);
   cursor: pointer;
-  font-size: 20px;
 }
 
 .label:not( :last-child ) {
