--- a/src/styles/PageDetails.css
+++ b/src/styles/PageDetails.css
@@ -1,6 +1,14 @@
 .page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   padding: 20px;
   text-align: center;
+}
+
+.page-container img{
+  border-radius: 50%;
 }
 
 .recomandation-container {
@@ -12,23 +20,21 @@
 }
 
 .iniciar-receita {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgb(9, 134, 156);
-  border: none;
-  border-radius: 5px;
+  position: fixed;
   bottom: 0;
   color: white;
   font-size: 15px;
   font-weight: 600;
-  height: 35px;
-  left: 10%;
-  margin-top: 5px;
-  outline: none;
-  padding-top: 10px;
-  position: fixed;
-  text-align: center;
+  height: 36px;
+  width: 100%;
+  padding: 10px;
   text-decoration: none;
+  text-align: center;
   text-transform: uppercase;
-  width: 80%;
 }
 
 .btn-none {
@@ -37,4 +43,29 @@
 
 .page-container button {
   margin-left: 10px;
+  border: 0;
+  background-color:rgb(101, 90, 124);
+}
+
+.finalizar-receita {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(9, 134, 156);
+  position: fixed;
+  bottom: 0;
+  color: white;
+  font-size: 15px;
+  font-weight: 600;
+  height: 36px;
+  width: 100%;
+  padding: 27px;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercas;
+}
+
+#btn-container img {
+  border-radius: 0%;
+  width: 50px;
 }
