--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -4,10 +4,21 @@
 
 .container {
   padding: 100px 20px 20px;
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-bottom: 100px;
 }
 
 .text-email p {
   color: white;
   font-family: monospace;
   font-size: 20px;
+}
+
+.buttons_profile {
+  width: 150px;
+  margin: 5px;
+  min-height: 150px;
 }
