--- a/src/styles/RecipeCard.css
+++ b/src/styles/RecipeCard.css
@@ -4,12 +4,18 @@
 }
 
 .content-individual {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: rgb(206, 201, 201);
   border-radius: 5px;
   box-shadow: 10px 10px 25px #00000070;
   padding: 15px;
   text-align: center;
   transition: all 0.3s;
+  width: 130px;
+  min-height: 110px;
 }
 
 .content img {
